# ChestnutGameEngine-Demo

./: CMakeLists.txt  README.md
assets/: bomb.anim  bomb.ent  bomb.texture  brittle_block.ent  brittle_block.texture  explosion.anim  explosion.ent  explosion.texture  level1.board  player.anim  player.ent  player.texture  solid_block.ent  solid_block.texture
assets/shaders/: sprite.vert
src/: board.cpp  board.hpp  game_params.hpp  main.cpp
src/components/: block_component.hpp  board_component.cpp  board_component.hpp  bomb_component.hpp  explosion_component.hpp  explosion_emitter_component.hpp  player_component.hpp
src/events/: explosion_event.hpp
src/systems/: bomb_system.cpp  bomb_system.hpp  explosion_system.cpp  explosion_system.hpp  player_system.cpp  player_system.hpp
